// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LinkPreview > renders a preview 1`] = `
<div>
  <div
    class="LinkPreview-module_container"
  >
    <div
      class="LinkPreview-module_wrapImageCaption"
    >
      <button
        aria-label="View image"
        class="LinkPreview-module_image"
      >
        <img
          alt=""
          class="LinkPreview-module_thumbnail"
          src="/static/element.png"
        />
      </button>
      <div
        class="LinkPreview-module_caption"
      >
        <p
          class="_typography_6v6n8_153 _font-body-md-regular_6v6n8_50 LinkPreview-module_title"
        >
          <a
            class="LinkPreview-module_link"
            href="https://matrix.org"
            rel="noreferrer noopener"
            target="_blank"
          >
            A simple title
          </a>
          <span
            class="_typography_6v6n8_153 _font-body-md-regular_6v6n8_50"
          >
             - Site name
          </span>
        </p>
        <p
          class="_typography_6v6n8_153 _font-body-md-regular_6v6n8_50 LinkedText-module_container LinkPreview-module_description"
        >
          A simple description
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`LinkPreview > renders a preview with just a title 1`] = `
<div>
  <div
    class="LinkPreview-module_container"
  >
    <div
      class="LinkPreview-module_wrapImageCaption"
    >
      <div
        class="LinkPreview-module_caption"
      >
        <p
          class="_typography_6v6n8_153 _font-body-md-regular_6v6n8_50 LinkPreview-module_title"
        >
          <a
            class="LinkPreview-module_link"
            href="https://matrix.org"
            rel="noreferrer noopener"
            target="_blank"
          >
            A simple title
          </a>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`LinkPreview > renders a preview with just a title and description 1`] = `
<div>
  <div
    class="LinkPreview-module_container"
  >
    <div
      class="LinkPreview-module_wrapImageCaption"
    >
      <div
        class="LinkPreview-module_caption"
      >
        <p
          class="_typography_6v6n8_153 _font-body-md-regular_6v6n8_50 LinkPreview-module_title"
        >
          <a
            class="LinkPreview-module_link"
            href="https://matrix.org"
            rel="noreferrer noopener"
            target="_blank"
          >
            A simple title
          </a>
        </p>
        <p
          class="_typography_6v6n8_153 _font-body-md-regular_6v6n8_50 LinkedText-module_container LinkPreview-module_description"
        >
          A simple description with a link to 
          <a
            data-linkified="true"
            href="https://matrix.org"
            rel="noreferrer noopener"
            target="_blank"
          >
            https://matrix.org
          </a>
        </p>
      </div>
    </div>
  </div>
</div>
`;
